v21.04/de/_sources/modules.rst.txt
Softwaremodule

Der

rc_cube

 wird mit einer Reihe von On-Board-Softwaremodulen mit verschiedenen
Funktionalitäten ausgeliefert. Jedes Softwaremodul bietet über seinen
zugehörigen

Node

 eine

REST-API-Schnittstelle

 als Programmierschnittstelle an.

Die Softwaremodule des

rc_cube

 können unterteilt werden in

3D-Kamera-Module, Abschnitt \ref{camera_modules:sect-3d-camera-
modules}  welche Stereobildpaare aufnehmen und 3D Tiefeninformationen
bereitstellen, und auch über die GigE Vision/GenICam-Schnittstelle des
rc_cube konfigurierbar sind.

Detektionsmodule, Abschnitt \ref{detection_modules:sect-detection-
modules}  welche eine Vielzahl verschiedener Detektionsfunktionen, wie
Greifpunktberechnungen und Objekterkennung anbieten.

Konfigurationsmodule, Abschnitt \ref{configuration_modules:sect-
configuration-modules}  welche es dem Nutzer ermöglichen, den rc_cube
für spezielle Anwendungen zu konfigurieren.

